--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,5 +1,4 @@
-
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -20,5 +19,5 @@ ul, ol, menu{
 }
 
 img{
-    width: 100%    
+    width: 100% ;   
 }
